[package]
name = "cup"
description = "(WIP) A New Dotfile Manager (again)"
version = "0.3.0"
license = "MIT"
authors = ["felpofo"]
edition = "2021"
homepage = "https://github.com/felpofo/cup-rs"
repository = "https://github.com/felpofo/cup-rs"
readme = "README.md"
keywords = [
  "cup",
  "dotfile",
  "manager",
  "cli"
]
catagories = [
  "command-line-utilities",
  "config",
  "filesystem",
]

[dependencies]
clap = { version = "4.1.0", features = ["cargo"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
termion = "2.0.1"
git2 = "0.16.0"
regex = "1.7.1"
uuid = { version = "1.2.2", features = ["v4"] }
