[package]
name = "cup"
description = "A New Dotfile Manager (again)"
version = "0.5.0"
license = "MIT"
authors = ["felpofo"]
edition = "2021"
homepage = "https://github.com/felpofo/cup-rs"
repository = "https://github.com/felpofo/cup-rs"
readme = "README.md"
keywords = [
  "cup",
  "dotfile",
  "manager",
  "cli"
]
catagories = [
  "command-line-utilities",
  "config",
  "filesystem",
]

[dependencies]
clap = { version = "4.1.0", features = ["cargo"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
termion = "2.0.1"
regex = "1.7.1"
git2 = "0.16.0"
anyhow = "1.0.71"
